--- a/src/mainproject/gameScreen.fxml
+++ b/src/mainproject/gameScreen.fxml
@@ -1,11 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1">
-    
+<AnchorPane id="AnchorPane" prefHeight="700.0" prefWidth="1002.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainproject.GameScreenController">
+   <children>
+      <TextArea fx:id="textBox" layoutX="131.0" layoutY="23.0" prefHeight="105.0" prefWidth="739.0" />
+      <Label layoutX="378.0" layoutY="176.0" prefHeight="22.0" prefWidth="301.0" text="Enter Character Name:" />
+      <TextField layoutX="378.0" layoutY="220.0" prefHeight="22.0" prefWidth="210.0" />
+      <Label layoutX="103.0" layoutY="271.0" prefHeight="31.0" prefWidth="150.0" text="Choose Race:" />
+      <CheckBox layoutX="101.0" layoutY="302.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="73.0" text="Human" />
+      <CheckBox layoutX="101.0" layoutY="333.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="73.0" text="Pounder" />
+      <Label layoutX="103.0" layoutY="424.0" prefHeight="17.0" prefWidth="73.0" text="Body Type:" />
+      <CheckBox layoutX="101.0" layoutY="453.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="83.0" text="Muscular" />
+      <CheckBox layoutX="101.0" layoutY="486.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="53.0" text="Fat" />
+      <CheckBox layoutX="101.0" layoutY="522.0" mnemonicParsing="false" text="Slim" />
+      <Label layoutX="395.0" layoutY="278.0" prefHeight="17.0" prefWidth="94.0" text="Choose Gende:" />
+      <CheckBox layoutX="395.0" layoutY="311.0" mnemonicParsing="false" text="Male" />
+      <CheckBox layoutX="395.0" layoutY="342.0" mnemonicParsing="false" text="Female" />
+      <Button layoutX="707.0" layoutY="596.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="136.0" text="Button" />
+   </children>
 </AnchorPane>
