--- a/src/mainproject/MainScreen.fxml
+++ b/src/mainproject/MainScreen.fxml
@@ -5,10 +5,11 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.media.MediaView?>
+<?import javafx.scene.shape.Rectangle?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1002.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainproject.MainScreenController">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="990.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainproject.MainScreenController">
    <children>
-      <ImageView fx:id="mainBackground" fitHeight="421.0" fitWidth="1196.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="mainBackground" fitHeight="421.0" fitWidth="1002.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="img/MainBackground.gif" />
          </image>
@@ -35,5 +36,16 @@
       <Button layoutX="311.0" layoutY="561.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="363.0" textAlignment="CENTER" />
       <Button layoutX="311.0" layoutY="634.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="363.0" textAlignment="CENTER" />
       <MediaView fx:id="mv" fitHeight="200.0" fitWidth="200.0" layoutX="802.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="14.0" layoutY="398.0" stroke="BLACK" strokeType="INSIDE" width="990.0" />
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="62.0" layoutY="512.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="img/zelda.jpg" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="785.0" layoutY="512.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="img/zelda.jpg" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
