--- a/src/mainproject/MainScreen.fxml
+++ b/src/mainproject/MainScreen.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.media.MediaView?>
-<?import javafx.scene.shape.Rectangle?>
 
 <AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="990.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainproject.MainScreenController">
    <children>
@@ -24,19 +23,34 @@
             <Image url="img/The-Great-Adventure.png" />
          </image>
       </ImageView>
-      <Button fx:id="closeButton" layoutX="313.0" layoutY="491.0" mnemonicParsing="false" onAction="#startButton" prefHeight="52.0" prefWidth="363.0" textAlignment="CENTER">
+      <Button fx:id="closeButton" layoutY="386.0" mnemonicParsing="false" onAction="#startButton" prefHeight="100.0" prefWidth="300.0" textAlignment="CENTER">
           <graphic>
               <ImageView>
                   <image>
-                      <Image url="img/Start.png" />
+                      <Image url="img/Start_1.png" />
                   </image>
               </ImageView> 
           </graphic>
       </Button>
-      <Button layoutX="311.0" layoutY="561.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="363.0" textAlignment="CENTER" />
-      <Button layoutX="311.0" layoutY="634.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="363.0" textAlignment="CENTER" />
+      <Button fx:id="loadButton" layoutX="353.0" layoutY="386.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="300.0" textAlignment="CENTER">
+          <graphic>
+              <ImageView>
+                  <image>
+                      <Image url="img/Load.png" />
+                  </image>
+              </ImageView> 
+          </graphic>
+      </Button>
+      <Button fx:id="optionsButton" layoutX="708.0" layoutY="385.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="300.0" textAlignment="CENTER">
+          <graphic>
+              <ImageView>
+                  <image>
+                      <Image url="img/Options (1).png" />
+                  </image>
+              </ImageView> 
+          </graphic>
+      </Button>
       <MediaView fx:id="mv" fitHeight="200.0" fitWidth="200.0" layoutX="802.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="14.0" layoutY="398.0" stroke="BLACK" strokeType="INSIDE" width="990.0" />
       <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="62.0" layoutY="512.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="img/zelda.jpg" />
