--- a/src/mainproject/application.css
+++ b/src/mainproject/application.css
@@ -5,4 +5,15 @@
 #closeButton{
     -fx-background-color: rgb(50,50,50);
    -fx-border-color: green;
+  
 }
+
+#optionsButton{
+    -fx-background-color: rgb(50,50,50);
+   -fx-border-color: green;
+}
+#loadButton{
+    -fx-background-color: rgb(50,50,50);
+   -fx-border-color: green;
+}
+
